--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -3,9 +3,11 @@
 
     <style name="BtnBlack">
         <item name="android:layout_margin">10dp</item>
+        <item name="android:background">@drawable/ripple_effect</item>
         <item name="android:textColor">@color/black</item>
         <item name="android:gravity">center</item>
         <item name="android:textSize">30sp</item>
+        <item name="android:clickable">true</item>
     </style>
 
     <style name="BtnOrange" parent="BtnBlack">
@@ -14,6 +16,7 @@
 
     <style name="BtnWhite" parent="BtnBlack">
         <item name="android:textColor">@color/white</item>
+        <item name="android:stateListAnimator">@animator/scaling_anim</item>
         <item name="android:background">@drawable/equals_btn_background</item>
     </style>
 </resources>
